# TestVLC

./: .cproject  .gitignore  .project  AndroidManifest.xml  matlab.mat
Code_unequal/: Readme.md
Graphs/: Num of symbols vs dist.eps  ook_compensated.eps  ook_uncompensated.eps  pwm_compensated.eps  symbol_width.eps
Logs_encoding1/: Readme.md
Logs_encoding2/: Readme.md
Opencv_imagpros/: .gitignore  CMakeLists.txt  Decode_log.txt  DisplayImage  MAE_decode.py  MAE_decode.py~  Readme.md  circle  edges.csv  imgPros  imgPros_2  scale_images  video_cv
Opencv_imagpros/Distance_logs/: Readme.md
Opencv_imagpros/Distance_logs2/: MAE8 PDR.ods  MAE8 PDR.xlsx  PDR_vs_Freq(MAE).eps  PDR_vs_Freq(PWM).eps  PDR_vs_Freq.fig  PDR_vs_Freq_FSK8.m  PDR_vs_Freq_MAE8.m  PDR_vs_Freq_PWM8.m  PWM8 PDR.xlsx  Readme.md
Opencv_imagpros/Images_encoding1/: Readme.md
Opencv_imagpros/Images_encoding2/: Readme.md
Opencv_imagpros/MAE_50/: output.txt
Opencv_imagpros/data_images/: Readme.md
Opencv_imagpros/log_30_6/: Readme.md
Opencv_imagpros/results/: Readme.md
Opencv_imagpros/src/: circles.cpp  detection.cpp  detection.hpp  imgPros.cpp  imgPros_2.cpp  scale_images.cpp
VLC_8bit_MAE/: VLC_8bit_MAE.ino
VLC_8bit_PWM/: VLC_8bit_PWM.ino
VLC_8bit_deadZone/: VLC_8bit_deadZone.ino
VLC_unequal_8bit_MAE/: VLC_unequal_8bit_MAE.ino
jni/: Android.mk  jni_imgPros.cpp  jni_part.cpp
light diameter/: Num of symbols vs dist-1.eps  Num of symbols vs frequency.eps  Readme.md  light_diameter.m  pixels.mat  symbols_read_vs_dist.m
matlab/: OOK_compensation.m  PWM_compensation.m  SVM_linear.mat  (+21 more)
(+23 files in other folders)
